--- a/src/_includes/layouts/page-tools.html
+++ b/src/_includes/layouts/page-tools.html
@@ -9,13 +9,13 @@
     <div class="accordion-list">
       <div class="accordion-card">
         <h3 class="accordion-card__title">Title Capitalization</h3>
-        <div class="accordion-card__content">
+        <div class="accordion-card__content" hidden>
           {% include "partials/tools/capitalize.html" %}
         </div>
       </div>
       <div class="accordion-card">
         <h3 class="accordion-card__title">URL Slug Generator</h3>
-        <div class="accordion-card__content">
+        <div class="accordion-card__content" hidden>
           {% include "partials/tools/slugify.html" %}
         </div>
       </div>
