--- a/src/_includes/partials/site-footer.html
+++ b/src/_includes/partials/site-footer.html
@@ -9,6 +9,6 @@
   </div>
   <div class="info-card">
     <h3 class="info-card__title">{{ i18n[lang].social }}</h3>
-    <p class="info-card__value"><a href="{{ site.twitter }}">Twitter</a>,  <a href="{{ site.github }}">GitHub</a></p>
+    <p class="info-card__value"><a href="{{ site.twitter }}">X</a>,  <a href="{{ site.github }}">GitHub</a></p>
   </div>
 </footer>
