--- a/src/_includes/partials/tools/capitalize.html
+++ b/src/_includes/partials/tools/capitalize.html
@@ -11,9 +11,9 @@
     <div class="form-group form-group--btns form-group--btns-space-between">
       <div class="form-group form-group--btns">
         <button type="submit" class="btn btn--primary form-capitalize__generate" disabled>Generate</button>
-        <button type="reset" class="btn btn--secondary form-capitalize__reset" disabled>Reset</button>
+        <button type="reset" class="btn btn--primary-outline form-capitalize__reset" disabled>Reset</button>
       </div>
-      <button type="button" class="btn btn--secondary form-capitalize__copy" disabled>Copy</button>
+      <button type="button" class="btn btn--primary-outline form-capitalize__copy" disabled>Copy</button>
     </div>
   </div>
 </form>
