--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -30,5 +30,6 @@
     </div>
   </body>
 
+  <script src="/js/navigation.js?{{ assetHash }}" async></script>
   {% block script %}{% endblock %}
 </html>
