--- a/src/_includes/partials/site-header.html
+++ b/src/_includes/partials/site-header.html
@@ -3,17 +3,30 @@
     <img class="site-header__logo" src="/img/adam-laki-logo.svg" alt="{{ site[lang].name }}" height="112" width="93">
   </a>
   <div class="site-header__helper">
-    <nav class="site-navigation">
-      <ul>
-        {% for item in navigation[lang].items %}
-        <li>
-          <a href="{{ item.url }}" {{ helpers.getLinkActiveState(item.url, page.url) | safe }}
-            >{{ item.text }}</a
-          >
-        </li>
-        {% endfor %}
-      </ul>
-    </nav>
+    <div class="site-header__navigation">
+      <button
+        class="btn btn--secondary btn--icon site-header__toggle"
+        data-action="navigation-toggle"
+        aria-controls="primary-menu"
+        aria-expanded="false"
+        aria-label="{{ i18n[lang].toggle }}"
+       >
+        <svg class="btn__icon" width="24" height="24" aria-hidden="true" role="img" focusable="false" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M24,19.6c0,-0.331 -0.269,-0.6 -0.6,-0.6l-20.8,0c-0.331,0 -0.6,0.269 -0.6,0.6l0,2.8c0,0.331 0.269,0.6 0.6,0.6l20.8,-0c0.331,-0 0.6,-0.269 0.6,-0.6l0,-2.8Zm0,-9c0,-0.331 -0.269,-0.6 -0.6,-0.6l-22.8,-0c-0.331,-0 -0.6,0.269 -0.6,0.6l0,2.8c0,0.331 0.269,0.6 0.6,0.6l22.8,-0c0.331,-0 0.6,-0.269 0.6,-0.6l0,-2.8Zm0,-9c0,-0.331 -0.269,-0.6 -0.6,-0.6l-15.8,-0c-0.331,-0 -0.6,0.269 -0.6,0.6l0,2.8c0,0.331 0.269,0.6 0.6,0.6l15.8,-0c0.331,-0 0.6,-0.269 0.6,-0.6l0,-2.8Z" fill="currentColor"></path>
+        </svg>
+      </button>
+      <nav class="site-navigation">
+        <ul class="navigation-menu">
+          {% for item in navigation[lang].items %}
+          <li>
+            <a href="{{ item.url }}" {{ helpers.getLinkActiveState(item.url, page.url) | safe }}
+              >{{ item.text }}</a
+            >
+          </li>
+          {% endfor %}
+        </ul>
+      </nav>
+    </div>
     {% include "partials/lang-switcher.html" %}
   </div>
 </header>
