--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1223,6 +1223,7 @@ html[dir=rtl] select.form-control:not([multiple]):not([size]) {
 }
 @media (min-width: 48em) {
   .site-header {
+    align-items: start;
     flex-direction: column;
     min-height: calc(100vh - var(--adam-container-gap) * 2);
     position: sticky;
