Add video to hero, update to 11ty v3

--- a/src/_includes/layouts/page-tools.html
+++ b/src/_includes/layouts/page-tools.html
@@ -24,7 +24,7 @@
 {% endblock %}
 
 {% block script %}
-  <script src="/js/accordion-card.js?{{ assetHash }}"></script>
-  <script src="/js/capitalize.js?{{ assetHash }}"></script>
-  <script src="/js/slugify.js?{{ assetHash }}"></script>
+  <script src="/js/accordion-card.js"></script>
+  <script src="/js/capitalize.js"></script>
+  <script src="/js/slugify.js"></script>
 {% endblock %}
