--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -1,4 +1,3 @@
-{% set assetHash = global.random() %}
 {% set lang = locale if locale else 'en' %}
 
 <!DOCTYPE html>
@@ -11,7 +10,7 @@
     <link rel="preload" href="/fonts/figtree-700.woff2" as="font" type="font/woff2" crossorigin>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     {% include "partials/meta-info.html" %}
-    <link rel="stylesheet" href="/css/main.css?{{ assetHash }}">
+    <link rel="stylesheet" href="/css/main.css">
   </head>
   <body>
     <a class="btn btn--primary skip-link" href="#content">Skip to Content</a>
@@ -30,6 +29,6 @@
     </div>
   </body>
 
-  <script src="/js/navigation.js?{{ assetHash }}" async></script>
+  <script src="/js/navigation.js" async></script>
   {% block script %}{% endblock %}
 </html>
