--- a/src/_includes/partials/site-hero.html
+++ b/src/_includes/partials/site-hero.html
@@ -1,4 +1,7 @@
 <div class="site-hero">
-  <img src="{{ coverImage }}" alt="{{ coverAlt }}" height="220" width="880">
+  <video autoplay loop muted class="site-hero__video">
+      <source src="{{ coverVideo }}" type="video/mp4">
+  </video>
+
   <div class="site-hero__introduction">{{ content | safe }}</div>
 </div>
