Revert hero video

--- a/src/_includes/partials/site-hero.html
+++ b/src/_includes/partials/site-hero.html
@@ -1,7 +1,4 @@
 <div class="site-hero">
-  <video autoplay loop muted class="site-hero__video">
-      <source src="{{ coverVideo }}" type="video/mp4">
-  </video>
-
+  <img src="{{ coverImage }}" alt="{{ coverAlt }}" height="220" width="880">
   <div class="site-hero__introduction">{{ content | safe }}</div>
 </div>
