--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -6,6 +6,7 @@
 @forward 'project-card';
 @forward 'container';
 @forward 'prism';
+@forward 'post-list';
 @forward 'tag-list';
 @forward 'pagination';
 @forward 'info-card';
