--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -6,7 +6,6 @@
   align-items: center;
   display: flex;
   flex-wrap: wrap;
-  font-family: config('font-family-heading', $typography);
   gap: spacer('s');
   margin-block-start: spacer('xl');
 
@@ -15,22 +14,22 @@
   }
 
   a {
-    --dimension: 2.5rem;
+    --size: 2.5rem;
     align-items: center;
-    background-color: hsl(0 0% 98%);
+    background-color: color('secondary-background', 'btn');
     border-radius: config('border-radius-lg', $display);
-    color: color(text);
+    color: color('primary');
     display: flex;
     font-size: config('font-size-sm', $typography);
-    height: var(--dimension);
+    font-weight: 700;
+    height: var(--size);
     justify-content: center;
-    min-width: var(--dimension);
+    min-width: var(--size);
     text-decoration: none;
-    text-transform: uppercase;
 
     &[aria-current='page'],
     &:hover {
-      background-color: color('text');
+      background-color: color('primary');
       color: hsl(0 0% 100%);
       text-decoration: none;
     }
